seeing if newsletter form doesnt look weird

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,8 @@ layout: default
 {{ content }}
 </br>
 
+<script async data-uid="2cac363296" src="https://wondrous-leader-2475.ck.page/2cac363296/index.js"></script> <!-- Newsletter signup form -->
 <center>
-    <script async data-uid="2cac363296" src="https://wondrous-leader-2475.ck.page/2cac363296/index.js"></script>
     <p style="font-size:90%;"> Enjoyed this article? Consider supporting my book buying habits! </p>    
     <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Toss a coin to your writer', '#29abe0', 'V7V61HII6');kofiwidget2.draw();</script> 
 </center> 
