dont know why it looks weird but wthv

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -58,4 +58,7 @@
 {% endif %}
 <!-- end of Twitter cards -->
 
+<script async data-uid="2cac363296" src="https://wondrous-leader-2475.ck.page/2cac363296/index.js"></script><!-- Newsletter signup form-->
+
+
 </head>
