added Twitter post, added substack form, removed previous signup form, touchups for the design

--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -596,3 +596,9 @@ hr.slender {
   content: "\e60e";
 }
 /*-- End of Icomoon icon font section --*/
+
+.substack{
+  text-align: center;
+  font-size: 85%;
+}
+
