--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-<h1>{{ page.title}}</h1>
-
+<h1 >{{ page.title}}</h1>
+<hr>
 
 {{ content }}
-</br>
+
 
 <center>
-    <p style="font-size:90%;"> Enjoyed this article? Consider supporting my book buying habits! </p>    
+    <p style="font-size:90%;"> Enjoyed this essay? Support my book buying habits! </p>    
     <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Toss a coin to your writer', '#29abe0', 'V7V61HII6');kofiwidget2.draw();</script> 
 </center> 
 
