--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,5 +9,7 @@
     {% include print-footer.html %}
     {% include footer.html %}
   </>
+  <script data-goatcounter="https://lettucebecereal.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
   
 </html>
