--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,17 +26,8 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
-  <!-- Google Analytics -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131918297-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-131918297-1');
-</script>
-
+  <!-- Analytics -->
+  <script data-goatcounter="https://lettucebecereal.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 
 <!-- Twitter cards -->
 <meta name="twitter:site"    content="@{{ site.twitter_username }}">
