--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
   <!-- Google Fonts loaded here depending on setting in _data/options.yml true loads font, blank does not-->
   {% if site.data.options.lato_font_load %}
     <link href='//fonts.googleapis.com/css?family=Lato:400,400italic' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet"> 
   {% endif %}
   
   <!-- Load up MathJax script if needed ... specify in /_data/options.yml file-->
