--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -38,7 +38,6 @@ html{
     font-size: 11px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-
   }
 
 @media screen and (min-width: 800px){ html{ font-size: 12px;} }
@@ -48,10 +47,6 @@ html{
 @media screen and (min-width: 1000px){ html{ font-size: 14px;} }
 
 @media screen and (min-width: 1100px){ html{ font-size: 15px; } }
-
-@media screen and (min-width: 1200px){ html{ font-size: 16px; } }
-
-@media screen and (min-width: 1300px){ html{ font-size: 17px; } }
 
 // sets link style according to values in _settings.scss
 .mathblock{
@@ -73,8 +68,15 @@ p > a { @if $link-style == underline
     {
       color: $contrast-color;
       text-decoration: none;
+      border-bottom: $contrast-color solid 2px;
     }
   }
+
+p > a:hover,
+p > a:active {
+  font-weight: bold;
+  color: #6d0000;
+}
 
 body { width: 87.5%;
        margin-left: auto;
@@ -103,8 +105,7 @@ h2 { font-style: italic;
      font-size: 2.1rem;
      line-height: 0.933333333333333; }
 
-h3 { font-style: italic;
-     font-weight: 400;
+h3 { 
      font-size: 1.8rem;
      margin-top: 2.1777777777777778rem;
      margin-bottom: 0;
@@ -419,9 +420,9 @@ li.listing hr{
 }
 .listing, .listing h3
 {
-  display: inline-block;
-  margin:0;
+  margin: 0;
 }
+
 li.listing {
   margin:0;
   & p{
@@ -429,6 +430,18 @@ li.listing {
   }
 }
 
+.listing h3 {
+  margin: 1em 0;
+  font-size: 2.5rem;
+  text-align: center;
+  font-weight: 700;
+}
+
+blockquote {
+  display: inline-block;
+  font-style: italic;
+
+}
 
 li.listing:last-of-type{
   border-bottom: none;
@@ -601,4 +614,5 @@ hr.slender {
   text-align: center;
   font-size: 85%;
 }
+
 
