--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -128,7 +128,7 @@ p, li { line-height: 2rem;
         padding-right: 2rem; //removed because,  why?
         vertical-align: baseline; }
 
-blockquote p {  font-size: 1.1rem;
+blockquote p {  font-size: 1.3rem;
                 line-height: 1.78181818;
                 margin-top: 1.78181818rem;
                 margin-bottom: 1.78181818rem;
@@ -440,6 +440,8 @@ li.listing {
 blockquote {
   display: inline-block;
   font-style: italic;
+  border-left: rgba(160,0,0,1) solid;
+  margin-top: 1em;
 }
 
 li.listing:last-of-type{
