switched goatcounter for google analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,7 +28,16 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
   <!-- Analytics -->
-  <script data-goatcounter="https://lettucebecereal.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-27564220-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-27564220-2');
+</script>
+
 
 <!-- Twitter cards -->
 <meta name="twitter:site"    content="@{{ site.twitter_username }}">
