Changed CSS, removed sidebar because it was useless and made the site ugly

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,15 +2,15 @@
 layout: default
 ---
 <h1 >{{ page.title}}</h1>
-<hr>
 
 {{ content }}
 
-
+<br>
+{% include social-sharing.html %}
 
 <center>
-    <p style="font-size:90%;"> Don't forget to subscribe to my newsletter to get each new essay delivered to your inbox!</p>
-    <p align ="center" style="margin:10px;">
+    <p style="font-size:90%; margin: 0px;"> Don't forget to subscribe to my newsletter to get each new essay delivered to your inbox!</p>
+    <p align ="center" style="margin:0px;">
     <iframe src="https://lettucebecereal.substack.com/embed" width="480" height="100" style="border:0px solid #EEE; background:fffff8;" frameborder="0" scrolling="no"></iframe>
     </p>
 </center> 
