--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -40,13 +40,13 @@ html{
     -moz-osx-font-smoothing: grayscale;
   }
 
-@media screen and (min-width: 800px){ html{ font-size: 12px;} }
+@media screen and (min-width: 800px){ html{ font-size: 13px;} }
 
-@media screen and (min-width: 900px){ html{ font-size: 13px;} }
+@media screen and (min-width: 900px){ html{ font-size: 14px;} }
 
-@media screen and (min-width: 1000px){ html{ font-size: 14px;} }
+@media screen and (min-width: 1000px){ html{ font-size: 15px;} }
 
-@media screen and (min-width: 1100px){ html{ font-size: 15px; } }
+@media screen and (min-width: 1100px){ html{ font-size: 16px; } }
 
 // sets link style according to values in _settings.scss
 .mathblock{
@@ -79,8 +79,7 @@ p > a:active {
 }
 
 body { width: 87.5%;
-       margin-left: auto;
-       margin-right: auto;
+       margin-top: 15px;
        padding-left: 12.5%;
        font-family: et-bembo, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
        background-color: $bg-color;
@@ -92,22 +91,27 @@ body { width: 87.5%;
 // --------- Typography stuff -----------//
 // added rational line height and margins ala http://webtypography.net/intro/
 
-h1 { font-weight: 400;
-     margin-top: 1.568rem;
-     margin-bottom: 1.568rem;
-     font-size: 2.5rem;
-     line-height: 0.784; }
+h1 {     
+  font-weight: bolder;
+  margin-top: 1.568rem;
+  margin-bottom: 1.5rem;
+  font-size: 3.0rem;
+  text-align: center;
+  line-height: 1em;
+  color: #a00000; 
+}
 
-h2 { font-style: italic;
-     font-weight: 400;
-     margin-top: 1.866666666666667rem;
+h2 { 
+     font-weight: 600;
+     margin-top: 3rem;
      margin-bottom: 0;
-     font-size: 2.1rem;
-     line-height: 0.933333333333333; }
+     font-size: 2.4rem;
+     line-height: 1.3;
+     }
 
 h3 { 
      font-size: 1.8rem;
-     margin-top: 2.1777777777777778rem;
+     margin-top: 3rem;
      margin-bottom: 0;
      line-height: 1.08888888888889; }
 
@@ -121,7 +125,7 @@ p .subtitle { font-style: italic;
              line-height: 1.08888888888889; }
 
 
-p, ol, ul { font-size: 1.2rem; }
+p, ol, ul { font-size: 1.3rem; }
 
 p, li { line-height: 2rem;
         margin-top: 1.4rem;
@@ -203,9 +207,8 @@ th, td{ font-size: 1.2rem;
 /* Basic Layout stuff --*/
 
 article { position: relative;
-          padding: 1
-
-          rem 0rem 2.5rem 0rem; } // reduced top and bottom padding by 50%
+          padding: 1;
+          width: 75%;} // reduced top and bottom padding by 50%
 
 section { padding-top: 1rem;
           padding-bottom: 1rem; }
@@ -236,45 +239,50 @@ figcaption { float: right;
 
 figure.fullwidth figcaption { float: left; margin-right: 0%; margin-left: 36%; }
 
-img { max-width: 100%; }
+article img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
 
-.sidenote, .marginnote { float: right;
-                         clear: right;
-                         margin-right: -60%;
-                         width: 50%;
-                         margin-top: 0;
-                         margin-bottom: 1.96rem;
-                         font-size: .9rem;
-                         line-height: 1.96; //changed to bring line heights into rational pattern
-                         vertical-align: baseline;
-                         position: relative; }
+// .sidenote, .marginnote { float: right;
+//                          clear: right;
+//                          margin-right: -60%;
+//                          width: 50%;
+//                          margin-top: 0;
+//                          margin-bottom: 1.96rem;
+//                          font-size: .9rem;
+//                          line-height: 1.96; //changed to bring line heights into rational pattern
+//                          vertical-align: baseline;
+//                          position: relative; }
 
-li .sidenote, li .marginnote{ margin-right: -80%; } //added to allow for the fact that lists are indented and marginnotes and sidenotes push to right
+// li .sidenote, li .marginnote{ margin-right: -80%; } //added to allow for the fact that lists are indented and marginnotes and sidenotes push to right
 
-blockquote .sidenote, blockquote .marginnote { margin-right: -79% }
+// blockquote .sidenote, blockquote .marginnote { margin-right: -79% }
 
-.sidenote-number { counter-increment: sidenote-counter; }
+// .sidenote-number { counter-increment: sidenote-counter; }
 
-.sidenote-number:after, .sidenote:before { content: counter(sidenote-counter) " ";
-                                           font-family: et-bembo-roman-old-style;
-                                           color: $contrast-color; //added color
-                                           position: relative;
-                                           vertical-align: baseline; }
+// .sidenote-number:after, .sidenote:before { content: counter(sidenote-counter) " ";
+//                                            font-family: et-bembo-roman-old-style;
+//                                            color: $contrast-color; //added color
+//                                            position: relative;
+//                                            vertical-align: baseline; }
 
-.sidenote-number:after { content: counter(sidenote-counter);
-                         font-size: 1rem;
-                         top: -0.5rem;
-                         left: 0.1rem; }
+// .sidenote-number:after { content: counter(sidenote-counter);
+//                          font-size: 1rem;
+//                          top: -0.5rem;
+//                          left: 0.1rem; }
 
-.sidenote:before { content: counter(sidenote-counter) ".\000a0"; // this is unicode for a non-breaking space
-                   color: $contrast-color;
-                   top: 0rem; } //removed superscripting for numerical reference in sidenote
+// .sidenote:before { content: counter(sidenote-counter) ".\000a0"; // this is unicode for a non-breaking space
+//                    color: $contrast-color;
+//                    top: 0rem; } //removed superscripting for numerical reference in sidenote
 
-p, footer, div.table-wrapper, div.mathblock{ width: 60%; }
+// p, footer, div.table-wrapper, div.mathblock{ width: 60%; }
 
-div.table-wrapper { overflow-x: auto; } //changed all overflow values to 'auto' so scroll bars appear only as needed
+// div.table-wrapper { overflow-x: auto; } //changed all overflow values to 'auto' so scroll bars appear only as needed
 
-@media screen and (max-width: 760px) { p, footer,div.mathblock { width: 90%; }
+@media screen and (max-width: 800px) { p, footer,div.mathblock { width: 90%; font-size: 1.7rem; }
                                        pre code { width: 87.5%; }
                                        ul { width: 85%; }
                                        figure { max-width: 90%; }
@@ -283,7 +291,11 @@ div.table-wrapper { overflow-x: auto; } //changed all overflow values to 'auto' 
                                        blockquote p, blockquote footer {  width: 80%;
                                                                           padding-left: 5%;
                                                                           padding-right: 5%;
-                                                                        }}
+                                                                        }
+                                        article{
+                                          width: 100%;
+                                        }
+                                                                      }
 
 .marginnote code, .sidenote code { font-size: 1rem; } //more .code class removal
 
@@ -302,11 +314,12 @@ span.newthought { font-variant: small-caps;
 input.margin-toggle { display: none; }
 
 label.sidenote-number { display: inline; }
-
+.sidenote, .marginnote { display: none !important; }
 label.margin-toggle:not(.sidenote-number) { display: none; }
 
 @media (max-width: 760px) { label.margin-toggle:not(.sidenote-number) { display: inline; color: $contrast-color; }
                             .sidenote, .marginnote { display: none; }
+                            .substack{display:none;}
                             .margin-toggle:checked + .sidenote,
                             .margin-toggle:checked + .marginnote { display: block;
                                                                    float: left;
@@ -331,7 +344,19 @@ label.margin-toggle:not(.sidenote-number) { display: none; }
                                              position: relative; }
                             div.table-wrapper, table, table.booktabs { width: 85%; }
                             div.table-wrapper { border-right: 1px solid #efefef; }
-                            img { max-width: 100%; } }
+                            img:not(.badge) { 
+                              width: 100%;
+                              max-width: 100%;} 
+                            .substack-embed {
+                              max-width: 70%;
+                            }
+                          }
+
+@media (max-width: 600px){
+  .badge {
+    display: none;
+  }
+}
 /*--- End of Basic Layout stuff from tufte.css ---*/
 
 /* -- Jekyll specific styling --*/
@@ -343,7 +368,6 @@ label.margin-toggle:not(.sidenote-number) { display: none; }
 
 header > nav.group, body footer {
   width: 95%;
-  padding-top: 2rem;
 }
 
 nav.group a.active:before{ content:"\0003c\000a0";} // escaped unicode for the carats and then a space on active menu links
@@ -397,7 +421,7 @@ ul.footer-links li{
 
 //Full width page styling stuff
 
-body.full-width, .content-listing, ul.content-listing li.listing{ width: 90%;
+body.full-width, .content-listing, ul.content-listing li.listing{ width: 100% !important;
        margin-left: auto;
        margin-right: auto;
        padding: 0% 5%;
@@ -512,10 +536,6 @@ hr.slender {
     tr,
     img {
         page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
     }
 
     p,
