fixed social sharing buttons i think

--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -214,10 +214,12 @@ section { padding-top: 1rem;
           padding-bottom: 1rem; }
 
 
-ul,ol { width: 45%;
-     -webkit-padding-start: 5%;
-     -webkit-padding-end: 5%;
-     list-style-type: none; }
+ul,ol { 
+  width: 80%;
+  padding-left: 5%;    
+}
+
+
 
 //li { padding: 0.5em 0; } //vertical padding on list items screws up vertical rhythym
 
