--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -88,6 +88,7 @@ body {
     flex-flow: column;
     margin: auto;
     align-items: center;
+    width: 60%;
 }
 
 // --------- Typography stuff -----------//
@@ -127,7 +128,7 @@ p .subtitle { font-style: italic;
              line-height: 1.08888888888889; }
 
 
-p, ol, ul { font-size: 1.3rem; }
+p, ol, ul { font-size: 1.6rem; }
 
 p, li { line-height: 2rem;
         margin-top: 1.4rem;
@@ -209,20 +210,15 @@ th, td{ font-size: 1.2rem;
 /* Basic Layout stuff --*/
 
 article.group { 
-          width: 50%
+          width: 80%
         } // reduced top and bottom padding by 50%
 
-.full-width article {
-  width: 60%;
-}
-
 header {
-  margin-top: 1em;
-  width: 60%;
+  
 }
 
 header > nav.group, body footer {
-  width: 95%;
+  display:flex;
 }
 
 header > nav.group {
@@ -235,8 +231,7 @@ section { padding-top: 1rem;
 
 
 
-ul,ol { width: 80%;
-  padding-left: 5%;
+ul,ol {
   list-style-type: none; }
 
 //li { padding: 0.5em 0; } //vertical padding on list items screws up vertical rhythym
@@ -302,11 +297,9 @@ article img {
 
 // div.table-wrapper { overflow-x: auto; } //changed all overflow values to 'auto' so scroll bars appear only as needed
 
-@media screen and (max-width: 800px) { p, footer,div.mathblock { font-size: 1.7rem; line-height: 2.5rem; padding-right: 0%; width: 100%;}
+@media screen and (max-width: 1000px) { p, footer,div.mathblock { font-size: 1.7rem; line-height: 2.5rem; padding-right: 0%; width: 100%;}
                                        pre code { width: 87.5%; }
                                        ul { width: 85%; }
-                                       .full-width ul {width: 100%}
-                                       .full-width article {width: 80%;}
                                        figure { max-width: 90%; }
                                        figcaption, figure.fullwidth figcaption { margin-right: 0%;
                                                                                  max-width: none; }
@@ -315,9 +308,9 @@ article img {
                                                                           padding-right: 5%;
                                                                         }
                                         article.group{
-                                          width: 80%;
+                                          width: 100%;
                                         }
-                                        header{
+                                        body{
                                           width: 80%;
                                         }
                                                                       }
@@ -396,13 +389,7 @@ header > nav  a{
   color: $contrast-color;
   padding-top: 1.5rem;
   text-decoration: none;
-  display: inline-block;
-  float: left;
-  margin-top: 0;
-  margin-bottom: 0;
   padding-right: 2rem;
-  //margin-left: 1rem;
-  vertical-align: baseline;
 }
 header > nav a img{
   height: 5rem;
@@ -437,7 +424,6 @@ ul.footer-links li{
 //Full width page styling stuff
 
 body.full-width, .content-listing, ul.content-listing li.listing{ 
-
 }
 
 .full-width ul,ol {
