added about page

--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -217,8 +217,8 @@ header {
   
 }
 
-header > nav.group, body footer {
-  display:flex;
+header > nav.group, body {
+  display: flex;
 }
 
 header > nav.group {
