--- a/_includes/insightporn_endpost_cta.html
+++ b/_includes/insightporn_endpost_cta.html
@@ -1,9 +1,11 @@
 <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-<div id="mc_embed_signup" style="border-top: solid 1px #a00000; border-bottom: solid 1px #a00000; padding-bottom: 1em;">
+
+<div id="mc_embed_signup" style ="border-top: solid 1px #a00000;">
+    <h1 style="font-size: 5em;"> Insight Porn</h1>
 <form action="https://lettucebecereal.us10.list-manage.com/subscribe/post?u=a4649fd35078dcd749ffb4a12&amp;id=765f753461" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-    <p><span style="color: #a00000; font-weight: bold; font-size: 2em;">Insight Porn</span> is a <span style="text-decoration: underline;">monthly newsletter</span> where you get the most interesting things I've read each month.</p>
+    <p><span style="color: #a00000; font-weight: bold;">Insight Porn</span> is a <span style="text-decoration: underline;">monthly newsletter</span> where you get the most interesting things I've read each month.</p>
 	<label for="mce-EMAIL"> </label>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your email adress" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
