added ctas to archive, typo in placeholder email input, and changed underline to bold in monthly

--- a/_includes/insightporn_midpost_cta.html
+++ b/_includes/insightporn_midpost_cta.html
@@ -3,9 +3,9 @@
 <div id="mc_embed_signup" style="border-top: solid 1px #a00000; border-bottom: solid 1px #a00000; padding-bottom: 1em;">
 <form action="https://lettucebecereal.us10.list-manage.com/subscribe/post?u=a4649fd35078dcd749ffb4a12&amp;id=765f753461" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-    <p><span style="color: #a00000; font-weight: bold; font-size: 2em;">Insight Porn</span> is a <span style="text-decoration: underline;">monthly newsletter</span> where you get the most interesting things I've read each month.</p>
+    <p><span style="color: #a00000; font-weight: bold; font-size: 2em;">Insight Porn</span> is a <strong>monthly</strong> newsletter where you get the most interesting things I've read each month.</p>
 	<label for="mce-EMAIL"> </label>
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your email adress" required>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a4649fd35078dcd749ffb4a12_765f753461" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
