--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,3 +12,35 @@
 <span>&copy; {{ site.time | date: '%Y' }} &nbsp;&nbsp;{{"João Eira" }}</span></br> <br>
 </div>  
 </footer>
+
+<style>
+  // Insight Porn CTAs
+#mc_embed_signup{
+  margin-top: 1em;
+  background: inherit; 
+  clear:left; 
+  width:100%;
+  }
+#mc_embed_signup h1 {
+  margin-bottom: 0em;
+}
+
+#mc_embed_signup input.email {
+  font-family: "Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;
+  /* font-size: 15px; */
+  color: #343434;
+  background-color: #ededed;
+  box-sizing: border-box;
+  height: 64px;
+  padding: 0px 0.4em;
+  display: inline-block;
+  margin: 0;
+  width: 80%;
+  vertical-align: top;
+}
+
+#mc_embed_signup .button {
+  height: 64px;
+  width: 100%;
+}
+</style>
