media query for mobile layout for insight porn ctas

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,6 @@
 </footer>
 
 <style>
-  // Insight Porn CTAs
 #mc_embed_signup{
   margin-top: 1em;
   background: inherit; 
@@ -43,4 +42,10 @@
   height: 64px;
   width: 100%;
 }
+
+@media (max-width: 800px) {
+    #mc_embed_signup input.email {width:100%; margin-bottom:5px;}
+    #mc_embed_signup .clear {display: block; width: 100% }
+    #mc_embed_signup .button {width: 100%;margin:0;}
+    }
 </style>
